--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fabric-mocha",
+  "name": "DOMinus",
   "version": "0.1.0",
-  "description": "ES2015 Development Facility",
+  "description": "The DOM Master",
   "scripts": {
     "start": "webpack -dw",
     "test": "./node_modules/karma/bin/karma start --auto-watch --no-single-run karma.config.js",
@@ -9,25 +9,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:baldore/fabric-mocha.git"
+    "url": "git@github.com:davegomez/dominus.git"
   },
   "author": {
-    "name": "Camilo Orrego",
-    "email": "acornssn@gmail.com",
-    "url": "https://github.com/baldore"
+    "name": "David Gómez",
+    "email": "dg.dave@gmail.com",
+    "url": "https://github.com/davegomez"
   },
-  "contributors": [
-    {
-      "name": "David Gómez",
-      "email": "dg.dave@gmail.com",
-      "url": "https://github.com/davegomez"
-    }
-  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/baldore/fabric-mocha/issues"
+    "url": "https://github.com/davegomez/dominus/issues"
   },
   "homepage": "https://github.com/baldore/fabric-mocha",
+  "dependencies": {
+    "immutable": "^3.7.5",
+    "ramda": "^0.17.1"
+  },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
     "babel": "^5.8.23",
@@ -38,12 +35,12 @@
     "chai": "^3.3.0",
     "css-loader": "^0.19.0",
     "eslint": "^1.6.0",
-    "eslint-loader": "^1.0.0",
+    "eslint-loader": "^1.1.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "imports-loader": "^0.6.4",
     "istanbul": "^0.3.22",
     "istanbul-instrumenter-loader": "^0.1.3",
-    "jscs": "^2.2.1",
+    "jscs": "^2.3.0",
     "jscs-loader": "^0.2.0",
     "karma": "^0.13.10",
     "karma-coverage": "^0.5.2",
@@ -59,7 +56,7 @@
     "sass-loader": "^3.0.0",
     "sinon": "^1.17.1",
     "style-loader": "^0.12.4",
-    "wallaby-webpack": "0.0.8",
+    "wallaby-webpack": "0.0.9",
     "webpack": "^1.12.2",
     "webpack-merge": "^0.2.0"
   }
